@@ -1,3 +1,9 @@
+2007-07-30  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-themes.c: (themes_init):
+	* data/appearance.glade: use our custom cell renderer for metathemes,
+	too, so the previews don't get shaded (bug #461198)
+
 2007-07-30  Thomas Wood  <thos@gnome.org>
 
 	* appearance-style.c: (update_color_buttons_from_string),
